versioned_docs/version-1.0.0/miscellaneous/caret-color.mdx
---
title: Caret Color
description: Utilities to control the text input cursor color.
slug: /caret-color
---

import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';
import ColorList from '@site/src/components/ColorList/ColorList';
import ColorPalette from '@site/src/components/ColorPalette/ColorPalette';

Utilities to control the text input cursor color.

<ColorList 
  baseClassName="cc-" 
  propertyNames={['caret-color']} 
  colorClasses={[
    { color: 'red', value: 'rgb(242, 109, 80)' },
    { color: 'orange', value: 'rgb(246, 142, 85)' },
    { color: 'yellow', value: 'rgb(255, 244, 103)' },
    { color: 'green', value: 'rgb(59, 184, 120)' },
    { color: 'teal', value: 'rgb(26, 187, 180)' },
    { color: 'aqua', value: 'rgb(0, 191, 243)' },
    { color: 'blue', value: 'rgb(67, 140, 202)' },
    { color: 'violet', value: 'rgb(133, 95, 168)' },
    { color: 'magenta', value: 'rgb(168, 99, 168)' },
    { color: 'pink', value: 'rgb(240, 110, 169)' },
    { color: 'gray', value: 'rgb(153, 153, 153)' },
    { color: 'lead', value: 'rgb(63, 63, 78)' }
  ]}
/>

### Customizing colors

Use `cc-l-[color]-*` for a lighter color and `cc-d-[color]-*` for a darker color.

```html
<!-- light variations -->
<div class="cc-l-pink-6"></div>
<div class="cc-l-pink-5"></div>
<div class="cc-l-pink-4"></div>
<div class="cc-l-pink-3"></div>
<div class="cc-l-pink-2"></div>
<div class="cc-l-pink-1"></div>

<!-- base color -->
<div class="cc-pink"></div>

<!-- dark variations -->
<div class="cc-d-pink-1"></div>
<div class="cc-d-pink-2"></div>
<div class="cc-d-pink-3"></div>
<div class="cc-d-pink-4"></div>
<div class="cc-d-pink-5"></div>
<div class="cc-d-pink-6"></div>
```

<ColorPalette
  colorData={[
    {
      name: 'Pink',
      color: '#f06ea9'
    }
  ]}
/>