versioned_docs/version-1.2.0/miscellaneous/caret-color.mdx
---
title: Caret Color
description: Utilities to control the text input cursor color.
slug: /caret-color
---

import ClassPreview from '@site/src/components/ClassPreview/ClassPreview';
import ColorList from '@site/src/components/ColorList/ColorList';
import ColorPalette from '@site/src/components/ColorPalette/ColorPalette';

Utilities to control the text input cursor color.

<ColorList 
  baseClassName="cc-" 
  propertyNames={['caret-color']} 
  colorClasses={[
    { color: 'red', value: 'rgba(215, 61, 61)' },
    { color: 'orange', value: 'rgba(224, 104, 20)' },
    { color: 'yellow', value: 'rgba(211, 161, 7)' },
    { color: 'green', value: 'rgba(31, 177, 85)' },
    { color: 'teal', value: 'rgba(18, 166, 149)' },
    { color: 'cyan', value: 'rgba(5, 164, 191)' },
    { color: 'blue', value: 'rgba(53, 117, 221)' },
    { color: 'indigo', value: 'rgba(89, 92, 217)' },
    { color: 'violet', value: 'rgba(125, 83, 221)' },
    { color: 'pink', value: 'rgba(212, 65, 138)' },
    { color: 'gray', value: 'rgba(96, 103, 115)' },
    { color: 'lead', value: 'rgba(63, 63, 78)' }
  ]}
/>

## Color

<ClassPreview
  codeData={`<input class="bc-gray cc-pink px-2 py-1 rad-1" placeholder="Email" type="email"></input>`}
  isPadded
  isCentered
  setVersion = '1.2.0'
/>


### Customizing colors

Use `cc-l-[color]-*` for a lighter color and `cc-d-[color]-*` for a darker color.

```html
<!-- light variations -->
<div class="cc-l-pink-6"></div>
<div class="cc-l-pink-5"></div>
<div class="cc-l-pink-4"></div>
<div class="cc-l-pink-3"></div>
<div class="cc-l-pink-2"></div>
<div class="cc-l-pink-1"></div>

<!-- base color -->
<div class="cc-pink"></div>

<!-- dark variations -->
<div class="cc-d-pink-1"></div>
<div class="cc-d-pink-2"></div>
<div class="cc-d-pink-3"></div>
<div class="cc-d-pink-4"></div>
<div class="cc-d-pink-5"></div>
<div class="cc-d-pink-6"></div>
```

<ColorPalette
  colorData={[
    {
      name: 'Pink',
      color: '#d4418a'
    }
  ]}
/>